# Orbit

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  README.md  mw4agent.sessions.json  setup.py  test_cli.py
config/: llm.default.json
docs/: do_impl.md  do_plan.md  mw4agent.code-workspace  orchestrating_llm_router.md  skills_impl_plan.md
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src-tauri/src/: lib.rs  main.rs
llm/: mock_server.py
mw4agent/: __init__.py  __main__.py
orbit/: __init__.py  __main__.py
tests/: README.md  conftest.py  test_agent_manager_create.py  test_agent_manager_delete.py  test_agent_skill_filter.py  test_agent_usage_stats.py  test_agent_workspace_file_resolve.py  test_apply_patch.py  test_auto_compaction.py  test_cli_agent_set_llm_interactive.py  test_cli_auth.py  test_cli_channels_feishu_add.py  test_cli_sessions.py  test_cli_skills.py  test_cli_tools.py  test_config_redact.py  test_configuration_agent_llm_wizard.py  test_crypto_secure_io.py  test_dag_spec.py  test_exec_process_background.py  test_exec_tool.py  test_feishu_accounts.py  test_feishu_agent_progress.py  test_feishu_channel_basic.py  test_feishu_connection_mode.py  test_feishu_user_oauth.py  test_gateway_agent_flow.py  test_gateway_agent_session_history_rpc.py  test_gateway_agents_list_rpc.py  test_gateway_orchestrate_trace_rpc.py  test_gateway_tool_ls.py  test_gateway_wait_timeout.py  test_llm_config.py  test_llm_http_retries.py  test_llm_per_agent.py  test_llm_stream_events.py  (+31 more)
(+278 files in other folders)
