[package]
name = "orbit-desktop"
version = "0.1.0"
description = "Orbit desktop shell"
authors = ["orbit"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orbit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
